test_suite/tests/ui/transparent/ser_at_least_one.rs
use serde_derive::Serialize;

#[derive(Serialize)]
#[serde(transparent)]
struct S {
    #[serde(skip)]
    a: u8,
}

fn main() {}
